--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
 	<meta property="og:image:height" content="735">
 	<meta property="og:image:type" content="image/webp">
 	<meta name="twitter:card" content="summary_large_image">
-	
+	<link type="image/x-icon" href="/favicon.ico" rel="shortcut icon">
+<link type="Image/x-icon" href="/favicon.ico" rel="icon">
 	
 	
 	<style>
@@ -1953,3 +1954,4 @@ href="https://bolshayastrana.tpk.mx/jUGtsSoE?erid=2VtzqvPR1eq"
 </body>
 
 </html>
+
