--- a/index.html
+++ b/index.html
@@ -1353,7 +1353,7 @@ body {
         <nav class="main-nav">
             <ul>
                 <li><a href="#">ГЛАВНАЯ</a></li>
-                <li><a href="№">ОБРАТНАЯ СВЯЗЬ</a></li>
+                <li><a href="#">ОБРАТНАЯ СВЯЗЬ</a></li>
             </ul>
         </nav>
         <div class="search-icon">
@@ -1954,4 +1954,5 @@ href="https://bolshayastrana.tpk.mx/jUGtsSoE?erid=2VtzqvPR1eq"
 </body>
 
 </html>
+
 
