--- a/index.html
+++ b/index.html
@@ -1384,7 +1384,7 @@ body {
 
       <section class="tour-cards-section">
         <div style="text-align: center;">
-            <h1>Туры по Дагестану</h1>
+            <h1>Туры по Дагестану на двоих</h1>
             </div>
         
         <h2>Лучшие экскурсии от проверенных гидов</h2>
@@ -1877,7 +1877,7 @@ href="https://bolshayastrana.tpk.mx/jUGtsSoE?erid=2VtzqvPR1eq"
         <h3>Ещё темы туров в Дагестане</h3>
         <div class="tags-container">
     <button class="tag-button">Пешком</button>
-    <button class="tag-button">Обзорные</button>
+	<button class="tag-button">Обзорные</button>
     <button class="tag-button">Осенью</button>
     <button class="tag-button">Летом</button>
     <button class="tag-button">Зимой</button>
@@ -1971,6 +1971,7 @@ href="https://bolshayastrana.tpk.mx/jUGtsSoE?erid=2VtzqvPR1eq"
 </body>
 
 </html>
+
 
 
 
