--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	<meta name="twitter:card" content="summary_large_image">
 	<link type="image/x-icon" href="/favicon.ico" rel="shortcut icon">
 <link type="Image/x-icon" href="/favicon.ico" rel="icon">
-	
+	<meta name="yandex-verification" content="39108e7b4455dfbe" />
 	
 <!-- Yandex.Metrika counter -->
 <script type="text/javascript">
@@ -1971,6 +1971,7 @@ href="https://bolshayastrana.tpk.mx/jUGtsSoE?erid=2VtzqvPR1eq"
 </body>
 
 </html>
+
 
 
 
