--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<style>img:is([sizes="auto" i], [sizes^="auto," i]) { contain-intrinsic-size: 3000px 1500px }</style>
 	
 	
-	<title>⭐Туры по Дагестану - авторские экскурсионные туры из Махачкалы: цена 2025</title>
+	<title>⭐Туры по Дагестану - авторские экскурсионные туры на двоих из Махачкалы: цена 2025</title>
 	<meta name="description" content="Лучшие туры по Дагестану на 3, 5, 7 дней. Индивидуальные и групповые туры по Дагестану. 🌞 Цена 2025 и отзывы на гидов. Купить экскурсию по горам. ">
 	
 	<meta property="og:locale" content="ru_RU">
@@ -1971,6 +1971,7 @@ href="https://bolshayastrana.tpk.mx/jUGtsSoE?erid=2VtzqvPR1eq"
 </body>
 
 </html>
+
 
 
 
