--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 	<meta name="robots" content="index, nofollow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
 	<style>img:is([sizes="auto" i], [sizes^="auto," i]) { contain-intrinsic-size: 3000px 1500px }</style>
-	
+	<link rel="canonical" href="https://turi-dagestan.vercel.app/" />
 	
 	<title>⭐Туры по Дагестану - авторские экскурсионные туры на двоих из Махачкалы: цена 2025</title>
 	<meta name="description" content="Лучшие туры по Дагестану на 3, 5, 7 дней. Индивидуальные и групповые туры по Дагестану. 🌞 Цена 2025 и отзывы на гидов. Купить экскурсию по горам. ">
@@ -1971,6 +1971,7 @@ href="https://bolshayastrana.tpk.mx/jUGtsSoE?erid=2VtzqvPR1eq"
 </body>
 
 </html>
+
 
 
 
