--- a/index.html
+++ b/index.html
@@ -1384,7 +1384,7 @@ body {
 
       <section class="tour-cards-section">
         <div style="text-align: center;">
-            <h1>Туры по Дагестану на двоих</h1>
+            <h1>Туры по Дагестану на двоих и для семьи</h1>
             </div>
         
         <h2>Лучшие экскурсии от проверенных гидов</h2>
@@ -1630,3 +1630,4 @@ href="https://bolshayastrana.tpk.mx/jUGtsSoE?erid=2VtzqvPR1eq"
 </body>
 
 </html>
+
